# embassy-stm32f1-template-nix

./: Cargo.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
