[package]
edition = "2021"
name = "embassy-stm32f1-template-nix"
version = "0.1.0"

[dependencies]
# Change stm32f103rb to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", features = [ "defmt", "unstable-pac", "stm32f103rb", "memory-x", "time-driver-any" ]  }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0",  features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0",  features = ["defmt"] }
embassy-futures = { version = "0.1.0"}

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
# heapless = { version = "0.8", default-features = false }
# nb = "1.0.0"
# static_cell = "2.0.0"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
